syntax = "proto3";

package basic;

option go_package = "github.com/piliphulko/marketplace-example/internal/proto-genr/basic";
//protoc -I . basic.proto --go_out=../../../.. --go-grpc_out=../../../..

enum REPLY {
    UNSPECIFIED = 0;
    CREATED = 1;
    UPDATED = 2;
    AUTHORIZED = 3;
    UNAUTHORIZED = 4;
}

message CustomerAut {
    string login_customer = 1;
    string passwort_customer = 2;
}

message CustomerInfo {
    CustomerAut customer_aut = 1;
    string customer_country = 2;
    string customer_ciry = 3;
}

message WarehouseAut {
    string login_warehouse = 1;
    string passwort_warehouse = 2;
}

message WarehouseInfo {
    WarehouseAut warehouse_aut = 1;
    string warehouse_name = 2;
    string warehouse_country = 3;
    string warehouse_city = 4;
    float warehouse_commission = 5;
    string warehouse_note = 6;
}

message VendorAut {
    string login_vendor = 1;
    string passwort_vendor = 2;
}

message VendorInfo {
    VendorAut vendor_aut = 1;
    string vendor_name = 2;
}